--- a/TestProject.csproj
+++ b/TestProject.csproj
@@ -8,11 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\1.png" />
     <None Remove="Images\burzum.png" />
     <None Remove="Images\MainPage.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\1.png" />
     <Resource Include="Images\burzum.png" />
     <Resource Include="Images\MainPage.png" />
   </ItemGroup>
