--- a/TestProject.csproj
+++ b/TestProject.csproj
@@ -14,6 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MaterialDesignColors" Version="2.1.2" />
+    <PackageReference Include="MaterialDesignThemes" Version="4.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Images\1.png" />
     <Resource Include="Images\burzum.png" />
     <Resource Include="Images\MainPage.png" />
