--- a/TestProject.csproj
+++ b/TestProject.csproj
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <None Update="video\GIGACHAD ГИГАЧАД.mp4">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="video\Video by Savehouse %2854+%29.mp4">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
