--- a/TestProject.csproj
+++ b/TestProject.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Remove="Images\1.png" />
+    <None Remove="Images\2.jpg" />
     <None Remove="Images\burzum.png" />
     <None Remove="Images\MainPage.png" />
     <None Remove="video\GIGACHAD ГИГАЧАД.mp4" />
@@ -21,6 +22,7 @@
 
   <ItemGroup>
     <Resource Include="Images\1.png" />
+    <Resource Include="Images\2.jpg" />
     <Resource Include="Images\burzum.png" />
     <Resource Include="Images\MainPage.png" />
     <Content Include="video\GIGACHAD ГИГАЧАД.mp4">
